# libtorch-image-recognition

./: CMakeLists.txt  README.md  example-app.cpp  train.csv
src/: chatbot.cpp  chatbot.h  chatgui.cpp  chatgui.h  chatlogic.cpp  chatlogic.h  csv.cpp  csv.h  dataset.cpp  dataset.h  graphnode.cpp  model.cpp  model.h  recognizer.cpp
